# controllers/User.controller.js
@@ -8,8 +8,26 @@ const BusinessError = require("../error/BusinessError");
 
 const allowedFields = [
   "id",
+  "name",
+  "surname",
+  "position",
+  "website_url",
   "organization_name",
+  "organisation_phone_number",
+  "organisation_email",
   "phone_number",
+  "address",
+  "postal_code",
+  "city",
+  "state",
+  "country",
+  "description",
+  "tax_number",
+  "linkedin",
+  "facebook",
+  "twitter",
+  "logo_url",
+  "video_url",
   "email",
   "next_allowed_assessment_date",
   "created_at",
