# validation/Auth.rules.js
@@ -2,21 +2,81 @@ const Joi = require("joi");
 
 const ALLOWED_FIELDS = [
   "id",
+  "name",
+  "surname",
+  "position",
+  "website_url",
   "organization_name",
+  "organisation_phone_number",
+  "organisation_email",
   "phone_number",
+  "address",
+  "postal_code",
+  "city",
+  "state",
+  "country",
+  "description",
+  "tax_number",
+  "linkedin",
+  "facebook",
+  "twitter",
+  "logo_url",
+  "video_url",
   "email",
   "created_at",
   "updated_at",
 ];
 
-const ALLOWED_SORT_FIELDS = ["organization_name", "email", "created_at", "updated_at"];
+const ALLOWED_SORT_FIELDS = [
+  "name",
+  "surname",
+  "position",
+  "website_url",
+  "organization_name",
+  "organisation_phone_number",
+  "organisation_email",
+  "phone_number",
+  "address",
+  "postal_code",
+  "city",
+  "state",
+  "country",
+  "description",
+  "tax_number",
+  "linkedin",
+  "facebook",
+  "twitter",
+  "logo_url",
+  "video_url",
+  "email",
+  "created_at",
+  "updated_at"
+];
 
 const signupSchema = {
   type: Joi.string().valid("users").required(),
   attributes: Joi.object()
     .keys({
+      name: Joi.string().max(255),
+      surname: Joi.string().max(255),
+      position: Joi.string().max(255),
+      website_url: Joi.string().max(2048),
       organization_name: Joi.string().max(255).required(),
+      organisation_phone_number: Joi.string().max(20),
+      organisation_email: Joi.string().email(),
       phone_number: Joi.string().max(20).required(),
+      address: Joi.string().max(255),
+      postal_code: Joi.string().max(20),
+      city: Joi.string().max(100),
+      state: Joi.string().max(100),
+      country: Joi.string().max(100),
+      description: Joi.string().max(2000),
+      tax_number: Joi.string().max(100),
+      linkedin: Joi.string().max(255),
+      facebook: Joi.string().max(255),
+      twitter: Joi.string().max(255),
+      logo_url: Joi.string().max(2048),
+      video_url: Joi.string().max(2048),
       email: Joi.string().email().required(),
       password: Joi.string().min(6).max(100).required(),
     })
