# validation/User.rules.js
@@ -2,8 +2,26 @@ const Joi = require("joi");
 
 const ALLOWED_FIELDS = [
   "id",
+  "name",
+  "surname",
+  "position",
+  "website_url",
   "organization_name",
+  "organisation_phone_number",
+  "organisation_email",
   "phone_number",
+  "address",
+  "postal_code",
+  "city",
+  "state",
+  "country",
+  "description",
+  "tax_number",
+  "linkedin",
+  "facebook",
+  "twitter",
+  "logo_url",
+  "video_url",
   "email",
   "next_allowed_assessment_date",
   "created_at",
@@ -11,7 +29,26 @@ const ALLOWED_FIELDS = [
 ];
 
 const ALLOWED_SORT_FIELDS = [
+  "name",
+  "surname",
+  "position",
+  "website_url",
   "organization_name",
+  "organisation_phone_number",
+  "organisation_email",
+  "phone_number",
+  "address",
+  "postal_code",
+  "city",
+  "state",
+  "country",
+  "description",
+  "tax_number",
+  "linkedin",
+  "facebook",
+  "twitter",
+  "logo_url",
+  "video_url",
   "email",
   "next_allowed_assessment_date",
   "created_at",
@@ -22,8 +59,26 @@ const userDataSchema = {
   type: Joi.string().valid("users").required(),
   attributes: Joi.object()
     .keys({
+      name: Joi.string().max(255).required(),
+      surname: Joi.string().max(255).required(),
+      position: Joi.string().max(255),
+      website_url: Joi.string().max(2048),
       organization_name: Joi.string().max(255).required(),
+      organisation_phone_number: Joi.string().max(20),
+      organisation_email: Joi.string().email().required(),
       phone_number: Joi.string().max(20).required(),
+      address: Joi.string().max(255),
+      postal_code: Joi.string().max(20).required(),
+      city: Joi.string().max(100).required(),
+      state: Joi.string().max(100).required(),
+      country: Joi.string().max(100).required(),
+      description: Joi.string().max(2000),
+      tax_number: Joi.string().max(100),
+      linkedin: Joi.string().max(255),
+      facebook: Joi.string().max(255),
+      twitter: Joi.string().max(255),
+      logo_url: Joi.string().max(2048),
+      video_url: Joi.string().max(2048),
       email: Joi.string().email().required(),
       password: Joi.string().min(6).max(100).required(),
     })
@@ -33,8 +88,26 @@ const userDataSchema = {
 const userUpdateDataSchema = {
   type: Joi.string().valid("users").required(),
   attributes: Joi.object().keys({
+    name: Joi.string().max(255),
+    surname: Joi.string().max(255),
+    position: Joi.string().max(255),
+    website_url: Joi.string().max(2048),
     organization_name: Joi.string().max(255),
+    organisation_phone_number: Joi.string().max(20),
+    organisation_email: Joi.string().email(),
     phone_number: Joi.string().max(20),
+    address: Joi.string().max(255),
+    postal_code: Joi.string().max(20),
+    city: Joi.string().max(100),
+    state: Joi.string().max(100),
+    country: Joi.string().max(100),
+    description: Joi.string().max(2000),
+    tax_number: Joi.string().max(100),
+    linkedin: Joi.string().max(255),
+    facebook: Joi.string().max(255),
+    twitter: Joi.string().max(255),
+    logo_url: Joi.string().max(2048),
+    video_url: Joi.string().max(2048),
     email: Joi.string().email(),
     password: Joi.string().min(6).max(100),
     next_allowed_assessment_date: Joi.date().iso().allow(null),
@@ -45,8 +118,26 @@ const userUpdateDataSchema = {
 const userSelfUpdateDataSchema = {
   type: Joi.string().valid("users").required(),
   attributes: Joi.object().keys({
+    name: Joi.string().max(255),
+    surname: Joi.string().max(255),
+    position: Joi.string().max(255),
+    website_url: Joi.string().max(2048),
     organization_name: Joi.string().max(255),
+    organisation_phone_number: Joi.string().max(20),
+    organisation_email: Joi.string().email(),
     phone_number: Joi.string().max(20),
+    address: Joi.string().max(255),
+    postal_code: Joi.string().max(20),
+    city: Joi.string().max(100),
+    state: Joi.string().max(100),
+    country: Joi.string().max(100),
+    description: Joi.string().max(2000),
+    tax_number: Joi.string().max(100),
+    linkedin: Joi.string().max(255),
+    facebook: Joi.string().max(255),
+    twitter: Joi.string().max(255),
+    logo_url: Joi.string().max(2048),
+    video_url: Joi.string().max(2048),
     email: Joi.string().email(),
     password: Joi.string().min(6).max(100),
   }),
